--- a/index.html
+++ b/index.html
@@ -17,20 +17,41 @@
 </head>
 <body>
 
-  IP Address Tracker
+  <header>
+    <h1>
+      IP Address Tracker
+    </h1>
+  </header>
 
-  Search for any IP address or domain
+  <input type="text" placeholder="Search for any IP address or domain">
 
-  IP Address
-  Location
-  Timezone
-    UTC <!-- add offset value dynamically using the API -->
-  ISP
+  <main>
+    <div class="search-results-container">
+      <div class="search-result-section">
+        <h5>IP Address</h5>
+      </div>
+
+      <div class="search-result-section">
+        <h5>Location</h5>
+      </div>
+
+      <div class="search-result-section">
+        <h5>Timezone</h5>
+        UTC <!-- add offset value dynamically using the API -->
+      </div>
+
+      <div class="search-result-section">
+        <h5>ISP</h5>
+      </div>
+    </div>
+  </main>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer>
+    <div class="attribution">
+      Coded by <a href="https://jayteepadilla.dev">Jaytee Padilla</a>.
+      Challenge by <a href="https://www.frontendmentor.io/challenges/ip-address-tracker-I8-0yYAH0" target="_blank">Frontend Mentor</a>. 
+    </div>
+  </footer>
   
   <script src="js/index.js"></script>
 </body>
