--- a/index.html
+++ b/index.html
@@ -27,41 +27,43 @@
     </style>
   </head>
   <body>
-    <header>
-      <h1>IP Address Tracker</h1>
-    </header>
+    <div class="container">
+      <header>
+        <h1>IP Address Tracker</h1>
+      </header>
 
-    <div class="search-bar">
-      <input type="text" placeholder="Search for any IP address or domain" />
+      <div class="search-bar">
+        <input type="text" placeholder="Search for any IP address or domain" />
 
-      <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14">
-          <path fill="none" stroke="#FFF" stroke-width="3" d="M2 1l6 6-6 6" />
-        </svg>
-      </button>
-    </div>
-
-    <main>
-      <div class="search-results-container">
-        <div class="search-result-section">
-          <h5>IP Address</h5>
-        </div>
-
-        <div class="search-result-section">
-          <h5>Location</h5>
-        </div>
-
-        <div class="search-result-section">
-          <h5>Timezone</h5>
-          UTC
-          <!-- add offset value dynamically using the API -->
-        </div>
-
-        <div class="search-result-section">
-          <h5>ISP</h5>
-        </div>
+        <button>
+          <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14">
+            <path fill="none" stroke="#FFF" stroke-width="3" d="M2 1l6 6-6 6" />
+          </svg>
+        </button>
       </div>
-    </main>
+
+      <main>
+        <div class="search-results-container">
+          <div class="search-result-section">
+            <h5>IP Address</h5>
+          </div>
+
+          <div class="search-result-section">
+            <h5>Location</h5>
+          </div>
+
+          <div class="search-result-section">
+            <h5>Timezone</h5>
+            UTC
+            <!-- add offset value dynamically using the API -->
+          </div>
+
+          <div class="search-result-section">
+            <h5>ISP</h5>
+          </div>
+        </div>
+      </main>
+    </div>
 
     <footer>
       <div class="attribution">
