--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles/css/main.css" />
+    <!-- <link rel="stylesheet" href="styles/css/main.css" /> -->
+    <link rel="stylesheet" href="styles/scss/main.scss">
 
     <title>Frontend Mentor | IP Address Tracker</title>
 
@@ -77,6 +78,6 @@
       </div>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
