Setup basic fetch request to API

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </header>
 
       <div class="search-bar">
-        <input type="text" placeholder="Search for any IP address or domain" />
+        <input type="text" id="ip-address-input" placeholder="Search for any IP address or domain" value="67.180.242.147" />
 
-        <button>
+        <button class="search-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14">
             <path fill="none" stroke="#FFF" stroke-width="3" d="M2 1l6 6-6 6" />
           </svg>
