Added p tags to house results of search content

--- a/index.html
+++ b/index.html
@@ -47,20 +47,24 @@
         <div class="search-results-container">
           <div class="search-result-section">
             <h5>IP Address</h5>
+            <p class="ip-result"></p>
           </div>
 
           <div class="search-result-section">
             <h5>Location</h5>
+            <p class="ip-location-result"></p>
           </div>
 
           <div class="search-result-section">
             <h5>Timezone</h5>
-            UTC
+            <p class="ip-timezone-result"></p>
+            <!-- UTC -->
             <!-- add offset value dynamically using the API -->
           </div>
 
           <div class="search-result-section">
             <h5>ISP</h5>
+            <p class="ip-isp-result"></p>
           </div>
         </div>
       </main>
