--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
 
     <link
       rel="icon"
@@ -11,21 +10,15 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <!-- <link rel="stylesheet" href="styles/css/main.css" /> -->
-    <link rel="stylesheet" href="styles/scss/main.scss">
+    <link rel="stylesheet" href="styles/scss/main.scss" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
+      integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
+      crossorigin=""
+    />
 
-    <title>Frontend Mentor | IP Address Tracker</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>IP Address Tracker | Frontend Mentor Challenge</title>
   </head>
   <body>
     <div class="container">
@@ -35,11 +28,21 @@
         </header>
 
         <div class="search-bar">
-          <input type="text" id="ip-address-input" placeholder="Search for any IP address or domain" value="67.180.242.147" />
+          <input
+            type="text"
+            id="ip-address-input"
+            placeholder="Search for any IP address or domain"
+            value="67.180.242.147"
+          />
 
           <button class="search-btn">
             <svg xmlns="http://www.w3.org/2000/svg" width="11" height="14">
-              <path fill="none" stroke="#FFF" stroke-width="3" d="M2 1l6 6-6 6" />
+              <path
+                fill="none"
+                stroke="#FFF"
+                stroke-width="3"
+                d="M2 1l6 6-6 6"
+              />
             </svg>
           </button>
         </div>
@@ -59,8 +62,6 @@
             <div class="search-result-section">
               <h5>Timezone</h5>
               <p class="ip-timezone-result"></p>
-              <!-- UTC -->
-              <!-- add offset value dynamically using the API -->
             </div>
 
             <div class="search-result-section">
@@ -70,6 +71,8 @@
           </div>
         </main>
       </div>
+
+      <div id="map"></div>
     </div>
 
     <footer>
@@ -84,6 +87,11 @@
       </div>
     </footer>
 
+    <script
+      src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js"
+      integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
+      crossorigin=""
+    ></script>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
