Changed the search bar to a submit event

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1>IP Address Tracker</h1>
         </header>
 
-        <div class="search-bar">
+        <form class="search-bar" type="submit">
           <input
             type="text"
             id="ip-address-input"
@@ -45,7 +45,7 @@
               />
             </svg>
           </button>
-        </div>
+        </form>
 
         <main>
           <div class="search-results-container">
