Styled search bar

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
           <input
             type="text"
             id="ip-address-input"
-            placeholder="Search for any IP address or domain"
-            value="67.180.242.147"
+            placeholder="Enter an IP Address"
+            aria-label="Enter an IP Address"
           />
 
           <button class="search-btn">
